--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -46,11 +46,11 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #383838;" text="correct" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" style="-fx-background-color: #383838;" text="incorrect" GridPane.rowIndex="3" />
-                  <Button mnemonicParsing="false" style="-fx-background-color: #383838;" text="total" GridPane.rowIndex="4" />
-                  <Button mnemonicParsing="false" style="-fx-background-color: #383838;" text="exit" GridPane.rowIndex="5" />
-                  <Button mnemonicParsing="false" style="-fx-background-color: #383838;" text="avg" GridPane.rowIndex="1" />
+                  <Button fx:id="_correctButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="correct" GridPane.rowIndex="2" />
+                  <Button fx:id="_incorrectButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="incorrect" GridPane.rowIndex="3" />
+                  <Button fx:id="_totalButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="total" GridPane.rowIndex="4" />
+                  <Button fx:id="_exitButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="exit" GridPane.rowIndex="5" />
+                  <Button fx:id="_averageButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="avg" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane>
@@ -62,12 +62,12 @@
                 <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label style="-fx-border-color: white; -fx-border-width: 0 2 0 0;" text="#" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Label fx:id="_statLabel" style="-fx-border-color: white; -fx-border-width: 0 2 0 0;" text="#" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font name="NanumGothic" size="180.0" />
                      </font>
                   </Label>
-                  <Label text="TITLE" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+                  <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
                      <font>
                         <Font name="NanumGothic" size="30.0" />
                      </font>
