--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -37,13 +37,13 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="32.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Button fx:id="_correctButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="correct" GridPane.rowIndex="2" />
@@ -62,9 +62,9 @@
                 <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" style="-fx-border-color: white; -fx-border-width: 0 2 0 0;" text="#" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Label fx:id="_statLabel" style="-fx-border-color: white; -fx-border-width: 0 2 0 0;" text="99.9" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
-                        <Font name="NanumGothic" size="180.0" />
+                        <Font name="NanumGothic" size="150.0" />
                      </font>
                   </Label>
                   <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
