--- a/src/gui/ResultsWindow.fxml
+++ b/src/gui/ResultsWindow.fxml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ResultsWindowController">
+<GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ResultsWindowController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="96.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.0" minWidth="10.0" prefWidth="383.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="0.0" prefWidth="117.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="142.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="241.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Label fx:id="_scoreLabel" alignment="CENTER" layoutX="3.0" layoutY="18.0" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="_scoreLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="40.0" />
          </font>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </Label>
-      <TableView fx:id="_resultsTable" layoutX="16.0" layoutY="89.0" prefHeight="235.0" prefWidth="567.0">
+      <TableView fx:id="_resultsTable" prefHeight="359.0" prefWidth="336.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <columns>
-            <TableColumn fx:id="qNo" prefWidth="75.0" text="Question" />
-            <TableColumn fx:id="qInt" prefWidth="99.0" text="Number" />
-            <TableColumn fx:id="qTranslation" prefWidth="263.0" text="Answer" />
-            <TableColumn fx:id="qCorrect" prefWidth="101.0" text="Your Answer" />
-         </columns></TableView>
-      <JFXButton fx:id="_mainMenuButton" layoutX="483.0" layoutY="336.0" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" />
-      <JFXButton fx:id="_level2Button" layoutX="362.0" layoutY="336.0" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" />
+            <TableColumn fx:id="qNo" prefWidth="46.0" />
+            <TableColumn fx:id="qInt" prefWidth="52.0" />
+            <TableColumn fx:id="qTranslation" prefWidth="224.0" />
+            <TableColumn fx:id="qCorrect" prefWidth="61.0" />
+         </columns>
+      </TableView>
+      <JFXButton fx:id="_mainMenuButton" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+      <JFXButton fx:id="_level2Button" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
    </children>
-</AnchorPane>
+</GridPane>
