--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatsWindowController">
+<GridPane prefHeight="500.0" prefWidth="800.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatsWindowController">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints maxHeight="200.0" vgrow="SOMETIMES" />
@@ -24,8 +24,8 @@
       </Text>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="379.0" minWidth="10.0" prefWidth="379.0" />
-          <ColumnConstraints hgrow="SOMETIMES" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="468.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="329.0" prefWidth="332.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -59,7 +59,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
                   <Button fx:id="_exitButton" mnemonicParsing="false" onAction="#handleExitButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="exit" GridPane.rowIndex="5" />
-                  <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="avg" GridPane.rowIndex="1">
+                  <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="\%88.8" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
@@ -74,12 +74,12 @@
                 <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="99.9" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
-                        <Font name="NanumGothic" size="150.0" />
+                        <Font name="NanumGothic" size="130.0" />
                      </font>
                   </Label>
-                  <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+                  <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
                      <font>
                         <Font name="NanumGothic" size="30.0" />
                      </font>
