--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -13,37 +14,32 @@
       <ColumnConstraints hgrow="SOMETIMES" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints maxHeight="200.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="262.0" minHeight="10.0" prefHeight="260.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-         <font>
-            <Font name="NanumGothic" size="90.0" />
-         </font>
-      </Text>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="468.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="329.0" prefWidth="332.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="486.0" prefWidth="512.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="243.0" prefWidth="288.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane GridPane.columnIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="32.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                  <RowConstraints vgrow="SOMETIMES" />
-                  <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="28.0" prefHeight="105.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="20.0" prefHeight="69.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Button fx:id="_correctButton" mnemonicParsing="false" onAction="#handleCorrectButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="correct" GridPane.rowIndex="2">
@@ -63,18 +59,20 @@
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
+                  <AnchorPane />
+                  <AnchorPane GridPane.rowIndex="6" />
                </children>
             </GridPane>
             <GridPane>
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="120.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font name="NanumGothic" size="130.0" />
                      </font>
@@ -86,6 +84,27 @@
                   </Label>
                </children>
             </GridPane>
+         </children>
+      </GridPane>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Press numbers to see what they are" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font name="NanumBarunGothic" size="30.0" />
+               </font>
+            </Label>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="NanumGothic" size="120.0" />
+               </font>
+            </Text>
          </children>
       </GridPane>
    </children>
