--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
+<GridPane prefHeight="500.0" prefWidth="800.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
    <columnConstraints>
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="600.0" prefWidth="600.0" />
    </columnConstraints>
@@ -26,13 +26,14 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="448.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints fillHeight="false" maxHeight="335.0" minHeight="92.0" prefHeight="92.0" vgrow="NEVER" />
-          <RowConstraints maxHeight="229.0" minHeight="65.0" prefHeight="185.0" vgrow="SOMETIMES" />
+            <RowConstraints fillHeight="false" maxHeight="121.0" minHeight="86.0" prefHeight="87.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" maxHeight="109.0" minHeight="77.0" prefHeight="108.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="129.0" minHeight="65.0" prefHeight="114.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_menuButton" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
-            <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
+            <JFXButton fx:id="_menuButton" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
          </children>
       </GridPane>
    </children>
