--- a/src/gui/ResultsWindow.fxml
+++ b/src/gui/ResultsWindow.fxml
@@ -10,19 +10,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ResultsWindowController">
+<GridPane prefHeight="500.0" prefWidth="800.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ResultsWindowController">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="96.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.0" minWidth="10.0" prefWidth="383.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="0.0" prefWidth="117.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="142.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="241.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="389.0" minHeight="10.0" prefHeight="300.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="335.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label fx:id="_scoreLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <Label fx:id="_scoreLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="40.0" />
          </font>
@@ -30,15 +28,29 @@
             <Insets />
          </GridPane.margin>
       </Label>
-      <TableView fx:id="_resultsTable" prefHeight="359.0" prefWidth="336.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <TableView fx:id="_resultsTable" GridPane.rowIndex="1">
          <columns>
-            <TableColumn fx:id="qNo" prefWidth="46.0" />
-            <TableColumn fx:id="qInt" prefWidth="52.0" />
-            <TableColumn fx:id="qTranslation" prefWidth="224.0" />
-            <TableColumn fx:id="qCorrect" prefWidth="61.0" />
+            <TableColumn fx:id="qNo" editable="false" minWidth="-Infinity" prefWidth="57.0" sortable="false" text="Q." />
+            <TableColumn fx:id="qInt" editable="false" prefWidth="85.0" sortable="false" text="Number" />
+            <TableColumn fx:id="qTranslation" editable="false" prefWidth="361.0" sortable="false" text="Translation" />
+            <TableColumn fx:id="qCorrect" editable="false" prefWidth="296.0" sortable="false" text="Your Answer was..." />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <JFXButton fx:id="_mainMenuButton" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-      <JFXButton fx:id="_level2Button" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <GridPane GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <JFXButton fx:id="_mainMenuButton" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level2Button" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+         </children>
+      </GridPane>
    </children>
 </GridPane>
