--- a/src/gui/ResultsWindow.fxml
+++ b/src/gui/ResultsWindow.fxml
@@ -28,12 +28,12 @@
             <Insets />
          </GridPane.margin>
       </Label>
-      <TableView fx:id="_resultsTable" GridPane.rowIndex="1">
+      <TableView fx:id="_resultsTable" styleClass="table" stylesheets="@TataiTheme.css" GridPane.rowIndex="1">
          <columns>
-            <TableColumn fx:id="qNo" editable="false" minWidth="-Infinity" prefWidth="57.0" sortable="false" text="Q." />
-            <TableColumn fx:id="qInt" editable="false" prefWidth="85.0" sortable="false" text="Number" />
-            <TableColumn fx:id="qTranslation" editable="false" prefWidth="361.0" sortable="false" text="Translation" />
-            <TableColumn fx:id="qCorrect" editable="false" prefWidth="296.0" sortable="false" text="Your Answer was..." />
+            <TableColumn fx:id="qNo" editable="false" minWidth="-Infinity" prefWidth="57.0" sortable="false" styleClass="tableheader" text="Q." />
+            <TableColumn fx:id="qInt" editable="false" prefWidth="85.0" sortable="false" styleClass="tableheader" text="Number" />
+            <TableColumn fx:id="qTranslation" editable="false" prefWidth="361.0" sortable="false" styleClass="tableheader" text="Translation" />
+            <TableColumn fx:id="qCorrect" editable="false" prefWidth="296.0" sortable="false" styleClass="tableheader" text="Your Answer was..." />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
