--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -4,9 +4,43 @@
 	-fx-alignment: CENTER;
 }
 
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
+
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color, #616161;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; /* 0 */
+}
+
+.table-row-cell:odd{
+    -fx-background-color: -fx-table-cell-border-color, #424242;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; /* 0 */  
+}
+
+.table {
+	-fx-background-color: transparent;	
+	-fx-text-fill: white;
+}
+
+.tableheader {
+	-fx-background-color: #383838;
+	-fx-text-fill: white;
+	-fx-border-color: white;
+}
+
 .button{
 	-fx-text-fill: white;
  	-fx-background-color: #cc0404;
+}
+
+.list-view .scroll-bar:horizontal .increment-arrow,
+.list-view .scroll-bar:horizontal .decrement-arrow,
+.list-view .scroll-bar:horizontal .increment-button,
+.list-view .scroll-bar:horizontal .decrement-button {
+    -fx-padding:0;
 }
 
 .button1{
