--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -25,21 +25,11 @@
             <Font size="100.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_correctButton" onAction="#handleCorrectClick" text="CorrectStub" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-      <JFXButton fx:id="_incorretButton" onAction="#handleIncorrectClick" text="IncorrectStub" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets left="20.0" />
-         </GridPane.margin></JFXButton>
       <Label fx:id="_translatedLabel" alignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <font>
             <Font size="35.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_nextQuestionButton" onAction="#handleNextQuestionClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Next" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-         <GridPane.margin>
-            <Insets right="40.0" />
-         </GridPane.margin>
-      </JFXButton>
       <Label fx:id="_questionNoLabel" alignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
          <font>
             <Font size="25.0" />
@@ -56,6 +46,29 @@
          <children>
             <JFXButton fx:id="_skipButton" onAction="#handleIncorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Skip" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <JFXButton fx:id="_tryAgainButton" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Try Again" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+         </children>
+      </GridPane>
+      <GridPane GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <JFXButton fx:id="_nextQuestionButton" onAction="#handleNextQuestionClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Submit" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </JFXButton>
+            <JFXButton fx:id="_incorretButton" onAction="#handleIncorrectClick" text="IncorrectStub" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </JFXButton>
+            <JFXButton fx:id="_correctButton" onAction="#handleCorrectClick" text="CorrectStub" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
    </children>
