--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -64,15 +64,15 @@
                   <Insets />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_incorretButton" onAction="#handleIncorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Playback" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_playbackButton" onAction="#handleIncorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Playback" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_correctButton" onAction="#handleCorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Record" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_recordButton" onAction="#handleCorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Record" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
-      <Button fx:id="exit_button" mnemonicParsing="false" styleClass="button1" stylesheets="@TataiTheme.css" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <Button fx:id="_exitButton" mnemonicParsing="false" onAction="#handleQuitClick" styleClass="button1" stylesheets="@TataiTheme.css" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets left="5.0" top="5.0" />
          </GridPane.margin>
